--- a/src/Components/Styles/MenuBf.css
+++ b/src/Components/Styles/MenuBf.css
@@ -16,3 +16,9 @@
      white-space: nowrap;
      align-self:flex-start;
  }
+
+ table{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+ }
