--- a/src/Components/Styles/Nav.css
+++ b/src/Components/Styles/Nav.css
@@ -1,4 +1,6 @@
 nav {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     width: 250px;
     height: 947px;
@@ -7,30 +9,43 @@ nav {
     background: #FF9243;
 }
 
-.section {
+/* .section {
     position: absolute;
     width: 200px;
     height: 48px;
     left: 30px;
     top: 210px;    
-    /* font-family: Nunito; */
+    /* font-family: Nunito; 
     font-size: 25px;
     line-height: 48px;  
     color: #A939AB;
-} 
+}  */
 
-#btn-new-ord {
+.btn-nav {
     width: 250px;
     height: 70px;
-    left: 0px;
-    top: 230px;
+    left: 0px;    
+    font-size: 26px;
+    line-height: 48px;  
+    color: #6f1a70;
     border-style: none;
+    background: #FF9243;
+    transition: all .1s ease;
+}
+
+.btn-nav:active {
+    background: #F3DB85;
+}
+
+.btn-nav:focus {
     background: #F3DB85;
 }
 
 #logo1 {
     position: static;
-    height: 18%;
-    padding-left: 43px;
+    height: 20%;
+    width: 80%;
+    padding-left: 23px;
     padding-top: 20px;
+    padding-bottom: 25px;
 }
