--- a/src/Components/Styles/ShowMenu.css
+++ b/src/Components/Styles/ShowMenu.css
@@ -3,6 +3,75 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    padding-top: 250px;
+    padding-top: 120px;
     padding-left: 400px;
+    height: max-content;
+    width: 500px;
+}
+
+#menu{
+    display: flex;
+    justify-self:center;
+    align-self:center;
+    align-content: space-around;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+#order{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+input{
+    width: 182px;
+    height: 25px;
+    left: 499px;
+    top: 258px;
+    background: #FFFFFF;
+    border-radius: 20px;
+    padding-left: 10px;
+}
+
+label{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+#input-table{
+    width: 35px;
+}
+
+#btn-options, #btn-send{
+    display: flex;
+    justify-content: space-around;
+}
+
+.btn-op {
+    width: 170px;
+    height: 60px;
+    background: #A939AB;
+    color: #FFFF;
+    /* box-shadow: 0px 4px 4px rgba(235, 150, 53, 0.932); */
+    border-radius: 20px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    transition: all .2s ease;
+}
+
+.btn-op:hover{
+    color: rgb(235, 206, 113);    
+}
+
+.confirm {
+    background: #8BAF3F;
+}
+
+.cancel{
+    background: #D2453C;
 }
